--- a/style.css
+++ b/style.css
@@ -11,3 +11,7 @@ Tags: black, brown, orange, tan, white, yellow, light, one-column, two-columns, 
 Text Domain: mytheme
 
 */
+
+body{
+    background-color: #000;
+}
